# Terminal

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands.json
dependencies/glad/: glad.c  glad.h
src/: EscapeHandler.cpp  EscapeHandler.h  Helper.cpp  Helper.h  Logger.cpp  Logger.h  PTYHandler.cpp  PTYHandler.h  Terminal.cpp  Terminal.h  main.cpp
